clang/test/BSC/Negative/Trait/GenericTrait/use_undefined_trait1/use_undefined_trait1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this);
};

int main() {
  _Trait S<int> *a; // expected-error {{explicit specialization of undeclared template _Trait 'S'}}
  return 0;
}